y.output
Grammar

    0 $accept: program $end

    1 program: exp

    2 exp: STRING
    3    | INT
    4    | NIL
    5    | MINUS exp
    6    | lvalue
    7    | lvalue ASSIGN exp
    8    | exp PLUS exp
    9    | exp MINUS exp
   10    | exp TIMES exp
   11    | exp DIVIDE exp
   12    | exp EQ exp
   13    | exp NEQ exp
   14    | exp LT exp
   15    | exp LE exp
   16    | exp GT exp
   17    | exp GE exp
   18    | exp AND exp
   19    | exp OR exp
   20    | ID LPAREN exp_list RPAREN
   21    | LPAREN exp_seq RPAREN
   22    | ID LBRACE field_list RBRACE
   23    | ID LBRACK exp RBRACK OF exp
   24    | IF exp THEN exp
   25    | IF exp THEN exp ELSE exp
   26    | WHILE exp DO exp
   27    | FOR ID ASSIGN exp TO exp DO exp
   28    | BREAK
   29    | LET decl_list IN exp_seq END

   30 exp_list: ε
   31         | exp
   32         | exp_list COMMA exp

   33 exp_seq: exp
   34        | exp SEMICOLON exp_seq

   35 field_list: ID EQ exp
   36           | field_list COMMA ID EQ exp

   37 lvalue: ID
   38       | lvalue DOT ID
   39       | lvalue LBRACK exp RBRACK
   40       | ID LBRACK exp RBRACK

   41 decl: type_decl
   42     | var_decl
   43     | function_decl

   44 decl_list: decl
   45          | decl_list decl

   46 type_decl: TYPE ID EQ type

   47 type: ID
   48     | LBRACE type_fields RBRACE
   49     | ARRAY OF ID

   50 type_fields: ε
   51            | type_field
   52            | type_fields COMMA type_field

   53 type_field: ID COLON ID

   54 var_decl: VAR ID var_id_suffix

   55 var_id_suffix: ASSIGN exp
   56              | COLON ID ASSIGN exp

   57 function_decl: FUNCTION ID LPAREN type_fields RPAREN function_id_suffix

   58 function_id_suffix: EQ exp
   59                   | COLON ID EQ exp


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <sval> (258) 20 22 23 27 35 36 37 38 40 46 47 49 53 54 56 57 59
    STRING <sval> (259) 2
    INT <ival> (260) 3
    COMMA (261) 32 36 52
    COLON (262) 53 56 59
    SEMICOLON (263) 34
    LPAREN (264) 20 21 57
    RPAREN (265) 20 21 57
    LBRACK (266) 23 39 40
    RBRACK (267) 23 39 40
    LBRACE (268) 22 48
    RBRACE (269) 22 48
    DOT (270) 38
    PLUS (271) 8
    MINUS (272) 5 9
    TIMES (273) 10
    DIVIDE (274) 11
    EQ (275) 12 35 36 46 58 59
    NEQ (276) 13
    LT (277) 14
    LE (278) 15
    GT (279) 16
    GE (280) 17
    AND (281) 18
    OR (282) 19
    ASSIGN (283) 7 27 55 56
    ARRAY (284) 49
    IF (285) 24 25
    THEN (286) 24 25
    ELSE (287) 25
    WHILE (288) 26
    FOR (289) 27
    TO (290) 27
    DO (291) 26 27
    LET (292) 29
    IN (293) 29
    END (294) 29
    OF (295) 23 49
    BREAK (296) 28
    NIL (297) 4
    FUNCTION (298) 57
    VAR (299) 54
    TYPE (300) 46
    ENDIF (301)
    UMINUS (302)


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    program <exp> (49)
        on left: 1
        on right: 0
    exp <exp> (50)
        on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29
        on right: 1 5 7 8 9 10 11 12 13 14 15 16 17 18 19 23 24 25 26 27 31 32 33 34 35 36 39 40 55 56 58 59
    exp_list <explist> (51)
        on left: 30 31 32
        on right: 20 32
    exp_seq <explist> (52)
        on left: 33 34
        on right: 21 29 34
    field_list <efieldlist> (53)
        on left: 35 36
        on right: 22 36
    lvalue <var> (54)
        on left: 37 38 39 40
        on right: 6 7 38 39
    decl <dec> (55)
        on left: 41 42 43
        on right: 44 45
    decl_list <declist> (56)
        on left: 44 45
        on right: 29 45
    type_decl <dec> (57)
        on left: 46
        on right: 41
    type <ty> (58)
        on left: 47 48 49
        on right: 46
    type_fields <fieldlist> (59)
        on left: 50 51 52
        on right: 48 52 57
    type_field <field> (60)
        on left: 53
        on right: 51 52
    var_decl <dec> (61)
        on left: 54
        on right: 42
    var_id_suffix <var_id_suffix_type> (62)
        on left: 55 56
        on right: 54
    function_decl <dec> (63)
        on left: 57
        on right: 43
    function_id_suffix <function_id_suffix_type> (64)
        on left: 58 59
        on right: 57


State 0

    0 $accept: • program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program  go to state 12
    exp      go to state 13
    lvalue   go to state 14


State 1

   20 exp: ID • LPAREN exp_list RPAREN
   22    | ID • LBRACE field_list RBRACE
   23    | ID • LBRACK exp RBRACK OF exp
   37 lvalue: ID •
   40       | ID • LBRACK exp RBRACK

    LPAREN  shift, and go to state 15
    LBRACK  shift, and go to state 16
    LBRACE  shift, and go to state 17

    $default  reduce using rule 37 (lvalue)


State 2

    2 exp: STRING •

    $default  reduce using rule 2 (exp)


State 3

    3 exp: INT •

    $default  reduce using rule 3 (exp)


State 4

   21 exp: LPAREN • exp_seq RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      go to state 18
    exp_seq  go to state 19
    lvalue   go to state 14


State 5

    5 exp: MINUS • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 20
    lvalue  go to state 14


State 6

   24 exp: IF • exp THEN exp
   25    | IF • exp THEN exp ELSE exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 21
    lvalue  go to state 14


State 7

   26 exp: WHILE • exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 22
    lvalue  go to state 14


State 8

   27 exp: FOR • ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 23


State 9

   29 exp: LET • decl_list IN exp_seq END

    FUNCTION  shift, and go to state 24
    VAR       shift, and go to state 25
    TYPE      shift, and go to state 26

    decl           go to state 27
    decl_list      go to state 28
    type_decl      go to state 29
    var_decl       go to state 30
    function_decl  go to state 31


State 10

   28 exp: BREAK •

    $default  reduce using rule 28 (exp)


State 11

    4 exp: NIL •

    $default  reduce using rule 4 (exp)


State 12

    0 $accept: program • $end

    $end  shift, and go to state 32


State 13

    1 program: exp •
    8 exp: exp • PLUS exp
    9    | exp • MINUS exp
   10    | exp • TIMES exp
   11    | exp • DIVIDE exp
   12    | exp • EQ exp
   13    | exp • NEQ exp
   14    | exp • LT exp
   15    | exp • LE exp
   16    | exp • GT exp
   17    | exp • GE exp
   18    | exp • AND exp
   19    | exp • OR exp

    PLUS    shift, and go to state 33
    MINUS   shift, and go to state 34
    TIMES   shift, and go to state 35
    DIVIDE  shift, and go to state 36
    EQ      shift, and go to state 37
    NEQ     shift, and go to state 38
    LT      shift, and go to state 39
    LE      shift, and go to state 40
    GT      shift, and go to state 41
    GE      shift, and go to state 42
    AND     shift, and go to state 43
    OR      shift, and go to state 44

    $default  reduce using rule 1 (program)


State 14

    6 exp: lvalue •
    7    | lvalue • ASSIGN exp
   38 lvalue: lvalue • DOT ID
   39       | lvalue • LBRACK exp RBRACK

    LBRACK  shift, and go to state 45
    DOT     shift, and go to state 46
    ASSIGN  shift, and go to state 47

    $default  reduce using rule 6 (exp)


State 15

   20 exp: ID LPAREN • exp_list RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 30 (exp_list)

    exp       go to state 48
    exp_list  go to state 49
    lvalue    go to state 14


State 16

   23 exp: ID LBRACK • exp RBRACK OF exp
   40 lvalue: ID LBRACK • exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 50
    lvalue  go to state 14


State 17

   22 exp: ID LBRACE • field_list RBRACE

    ID  shift, and go to state 51

    field_list  go to state 52


State 18

    8 exp: exp • PLUS exp
    9    | exp • MINUS exp
   10    | exp • TIMES exp
   11    | exp • DIVIDE exp
   12    | exp • EQ exp
   13    | exp • NEQ exp
   14    | exp • LT exp
   15    | exp • LE exp
   16    | exp • GT exp
   17    | exp • GE exp
   18    | exp • AND exp
   19    | exp • OR exp
   33 exp_seq: exp •
   34        | exp • SEMICOLON exp_seq

    SEMICOLON  shift, and go to state 53
    PLUS       shift, and go to state 33
    MINUS      shift, and go to state 34
    TIMES      shift, and go to state 35
    DIVIDE     shift, and go to state 36
    EQ         shift, and go to state 37
    NEQ        shift, and go to state 38
    LT         shift, and go to state 39
    LE         shift, and go to state 40
    GT         shift, and go to state 41
    GE         shift, and go to state 42
    AND        shift, and go to state 43
    OR         shift, and go to state 44

    $default  reduce using rule 33 (exp_seq)


State 19

   21 exp: LPAREN exp_seq • RPAREN

    RPAREN  shift, and go to state 54


State 20

    5 exp: MINUS exp •
    8    | exp • PLUS exp
    9    | exp • MINUS exp
   10    | exp • TIMES exp
   11    | exp • DIVIDE exp
   12    | exp • EQ exp
   13    | exp • NEQ exp
   14    | exp • LT exp
   15    | exp • LE exp
   16    | exp • GT exp
   17    | exp • GE exp
   18    | exp • AND exp
   19    | exp • OR exp

    $default  reduce using rule 5 (exp)


State 21

    8 exp: exp • PLUS exp
    9    | exp • MINUS exp
   10    | exp • TIMES exp
   11    | exp • DIVIDE exp
   12    | exp • EQ exp
   13    | exp • NEQ exp
   14    | exp • LT exp
   15    | exp • LE exp
   16    | exp • GT exp
   17    | exp • GE exp
   18    | exp • AND exp
   19    | exp • OR exp
   24    | IF exp • THEN exp
   25    | IF exp • THEN exp ELSE exp

    PLUS    shift, and go to state 33
    MINUS   shift, and go to state 34
    TIMES   shift, and go to state 35
    DIVIDE  shift, and go to state 36
    EQ      shift, and go to state 37
    NEQ     shift, and go to state 38
    LT      shift, and go to state 39
    LE      shift, and go to state 40
    GT      shift, and go to state 41
    GE      shift, and go to state 42
    AND     shift, and go to state 43
    OR      shift, and go to state 44
    THEN    shift, and go to state 55


State 22

    8 exp: exp • PLUS exp
    9    | exp • MINUS exp
   10    | exp • TIMES exp
   11    | exp • DIVIDE exp
   12    | exp • EQ exp
   13    | exp • NEQ exp
   14    | exp • LT exp
   15    | exp • LE exp
   16    | exp • GT exp
   17    | exp • GE exp
   18    | exp • AND exp
   19    | exp • OR exp
   26    | WHILE exp • DO exp

    PLUS    shift, and go to state 33
    MINUS   shift, and go to state 34
    TIMES   shift, and go to state 35
    DIVIDE  shift, and go to state 36
    EQ      shift, and go to state 37
    NEQ     shift, and go to state 38
    LT      shift, and go to state 39
    LE      shift, and go to state 40
    GT      shift, and go to state 41
    GE      shift, and go to state 42
    AND     shift, and go to state 43
    OR      shift, and go to state 44
    DO      shift, and go to state 56


State 23

   27 exp: FOR ID • ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 57


State 24

   57 function_decl: FUNCTION • ID LPAREN type_fields RPAREN function_id_suffix

    ID  shift, and go to state 58


State 25

   54 var_decl: VAR • ID var_id_suffix

    ID  shift, and go to state 59


State 26

   46 type_decl: TYPE • ID EQ type

    ID  shift, and go to state 60


State 27

   44 decl_list: decl •

    $default  reduce using rule 44 (decl_list)


State 28

   29 exp: LET decl_list • IN exp_seq END
   45 decl_list: decl_list • decl

    IN        shift, and go to state 61
    FUNCTION  shift, and go to state 24
    VAR       shift, and go to state 25
    TYPE      shift, and go to state 26

    decl           go to state 62
    type_decl      go to state 29
    var_decl       go to state 30
    function_decl  go to state 31


State 29

   41 decl: type_decl •

    $default  reduce using rule 41 (decl)


State 30

   42 decl: var_decl •

    $default  reduce using rule 42 (decl)


State 31

   43 decl: function_decl •

    $default  reduce using rule 43 (decl)


State 32

    0 $accept: program $end •

    $default  accept


State 33

    8 exp: exp PLUS • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 63
    lvalue  go to state 14


State 34

    9 exp: exp MINUS • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 64
    lvalue  go to state 14


State 35

   10 exp: exp TIMES • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 65
    lvalue  go to state 14


State 36

   11 exp: exp DIVIDE • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 66
    lvalue  go to state 14


State 37

   12 exp: exp EQ • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 67
    lvalue  go to state 14


State 38

   13 exp: exp NEQ • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 68
    lvalue  go to state 14


State 39

   14 exp: exp LT • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 69
    lvalue  go to state 14


State 40

   15 exp: exp LE • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 70
    lvalue  go to state 14


State 41

   16 exp: exp GT • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 71
    lvalue  go to state 14


State 42

   17 exp: exp GE • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 72
    lvalue  go to state 14


State 43

   18 exp: exp AND • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 73
    lvalue  go to state 14


State 44

   19 exp: exp OR • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 74
    lvalue  go to state 14


State 45

   39 lvalue: lvalue LBRACK • exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 75
    lvalue  go to state 14


State 46

   38 lvalue: lvalue DOT • ID

    ID  shift, and go to state 76


State 47

    7 exp: lvalue ASSIGN • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 77
    lvalue  go to state 14


State 48

    8 exp: exp • PLUS exp
    9    | exp • MINUS exp
   10    | exp • TIMES exp
   11    | exp • DIVIDE exp
   12    | exp • EQ exp
   13    | exp • NEQ exp
   14    | exp • LT exp
   15    | exp • LE exp
   16    | exp • GT exp
   17    | exp • GE exp
   18    | exp • AND exp
   19    | exp • OR exp
   31 exp_list: exp •

    PLUS    shift, and go to state 33
    MINUS   shift, and go to state 34
    TIMES   shift, and go to state 35
    DIVIDE  shift, and go to state 36
    EQ      shift, and go to state 37
    NEQ     shift, and go to state 38
    LT      shift, and go to state 39
    LE      shift, and go to state 40
    GT      shift, and go to state 41
    GE      shift, and go to state 42
    AND     shift, and go to state 43
    OR      shift, and go to state 44

    $default  reduce using rule 31 (exp_list)


State 49

   20 exp: ID LPAREN exp_list • RPAREN
   32 exp_list: exp_list • COMMA exp

    COMMA   shift, and go to state 78
    RPAREN  shift, and go to state 79


State 50

    8 exp: exp • PLUS exp
    9    | exp • MINUS exp
   10    | exp • TIMES exp
   11    | exp • DIVIDE exp
   12    | exp • EQ exp
   13    | exp • NEQ exp
   14    | exp • LT exp
   15    | exp • LE exp
   16    | exp • GT exp
   17    | exp • GE exp
   18    | exp • AND exp
   19    | exp • OR exp
   23    | ID LBRACK exp • RBRACK OF exp
   40 lvalue: ID LBRACK exp • RBRACK

    RBRACK  shift, and go to state 80
    PLUS    shift, and go to state 33
    MINUS   shift, and go to state 34
    TIMES   shift, and go to state 35
    DIVIDE  shift, and go to state 36
    EQ      shift, and go to state 37
    NEQ     shift, and go to state 38
    LT      shift, and go to state 39
    LE      shift, and go to state 40
    GT      shift, and go to state 41
    GE      shift, and go to state 42
    AND     shift, and go to state 43
    OR      shift, and go to state 44


State 51

   35 field_list: ID • EQ exp

    EQ  shift, and go to state 81


State 52

   22 exp: ID LBRACE field_list • RBRACE
   36 field_list: field_list • COMMA ID EQ exp

    COMMA   shift, and go to state 82
    RBRACE  shift, and go to state 83


State 53

   34 exp_seq: exp SEMICOLON • exp_seq

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      go to state 18
    exp_seq  go to state 84
    lvalue   go to state 14


State 54

   21 exp: LPAREN exp_seq RPAREN •

    $default  reduce using rule 21 (exp)


State 55

   24 exp: IF exp THEN • exp
   25    | IF exp THEN • exp ELSE exp
